@@ -1,5 +1,10 @@
 2000-12-04  Ben Elliston  <bje@redhat.com>
 
+	* cgen-ops.h (SUBWORDSIQI): Mask off top bits.
+	(SUBWORDSIUQI): Likewise.
+	(SUBWORDDIHI): Likewise.
+	(SUBWORDDIQI): New function.
+
 	* cgen-trace.c (disassemble_insn): Remove unused declaration.
 	* cgen-scache.c (scache_option_handler): Remove unused local var.
 
